--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://blog.dev/public/"
+baseurl = "https://dbergunder.github.io"
 languageCode = "en-us"
 title = "Developer Blog"
 # Enable comments by entering your Disqus shortname
